# atom-db

./: .gitignore  ATOMIC-CELLS.md  COGNITIVE-EXPERIMENT.md  CONTEXT-GATING-EXPERIMENT.md  Cargo.toml  FIRST-PRINCIPLES.md  GUARDED-CONTEXT-RELAY.md  LICENSE  OBSERVER-LEASES.md  README.md  RETRIEVAL-FIELD.md  STAGE-8-INDEX-GAIN-OVERLAP.md  STAGE-9-FEEDBACK-LOOP.md
.github/workflows/: ci.yml
artifacts/: cognitive-stage2-report.txt  stage1.atoms  stage3-context-gating-final.atoms  stage3-context-gating-report.txt  stage4-guarded-relay-report.txt  stage4-guarded-relay.atoms  stage5-atomic-cells-final.atoms  stage5-atomic-cells-report.txt  stage6-observer-leases-report.txt  stage6-observer-leases.atoms  stage7-retrieval-field-report.txt  stage7-retrieval-field.atoms
crates/atom-retrieval-field/: Cargo.toml
crates/atom-retrieval-field/src/: lib.rs
src/: cell.rs  cognitive.rs  digest.rs  lib.rs  main.rs  retrieval.rs  store.rs
tests/: observer_leases.rs
