[package]
name = "atom-db"
version = "0.1.0"
edition = "2024"
description = "A dependency-free, content-addressed database derived from first principles"
license = "MIT"
default-run = "atom-db"

[workspace]
members = ["crates/atom-retrieval-field"]

[dependencies]
atom-retrieval-field = { path = "crates/atom-retrieval-field" }

[lib]
name = "atom_db"
path = "src/lib.rs"

[[bin]]
name = "atom-db"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
